nextcloud/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloud.claytonc.dev`)
      kind: Rule
      services:
        - name: nextcloud
          port: 8080
          passHostHeader: true
  #    middlewares:
  #      - name: auth
  # Use the secret generated by cert-manager
  tls:
    secretName: nextcloud-tls
